--- a/package.json
+++ b/package.json
@@ -12,21 +12,28 @@
     "@mapbox/geojson-normalize": "^0.0.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@tmcw/togeojson": "^5.6.0",
+    "@turf/bbox": "^7.0.0",
     "csv2geojson": "^5.1.2",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.13.0",
     "osmtogeojson": "^3.0.0-beta.5",
     "polytogeojson": "^0.0.1",
+    "qs-hash": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-drop": "^3.1.6",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.7.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^9.7.0",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.8.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
