--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.34.3",
     "globals": "^15.8.0",
     "postcss": "^8.4.21",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
   }
