--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@mapbox/geojson-normalize": "^0.0.1",
+    "@mapbox/geojson-rewind": "^0.5.2",
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@tmcw/togeojson": "^5.6.0",
     "@turf/bbox": "^7.0.0",
+    "@turf/circle": "^7.0.0",
+    "@turf/length": "^7.0.0",
     "csv2geojson": "^5.1.2",
+    "geojson-rewind": "^0.3.1",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.13.0",
+    "numeral": "^2.0.6",
     "osmtogeojson": "^3.0.0-beta.5",
     "polytogeojson": "^0.0.1",
     "qs-hash": "^0.0.0",
